# vita49-pluto-sdr

./: .editorconfig  .gitignore  BUGFIX_CONTEXT_PACKETS.md  BUILD_AND_DEPLOY.md  CHANGELOG.md  CONTRIBUTING.md  DYNAMIC_CONFIG_FIX.md  E2E_TEST_README.md  LICENSE  MIGRATION_PLAN.md  Makefile  NEXT_STEPS.md  PR_DESCRIPTION.md  QUICKSTART.md  QUICKSTART_WEB_UI.md  README.md  README_C_VERSION.md  README_NEW.md  TESTING_SUMMARY.md  WEB_UI_SUMMARY.md  WINDOWS_BUILD_GUIDE.md  WINDOWS_QUICKSTART.md  build-with-docker.bat  build-with-docker.sh  deploy_to_pluto.bat  deploy_to_pluto.sh  example_parallel_receivers.py  pluto_vita49_streamer.c  pyproject.toml  requirements-pluto.txt  requirements-web.txt  requirements.txt  setup.py  test_e2e_full_pipeline.py  test_pluto_config.py  vita49_config_client.py  vita49_embedded.py
docker/: Dockerfile
docs/: BUFFER_HEALTH_MONITORING.md  BUILD.md  DEVELOPMENT.md  PACKET_OPTIMIZATION.md  PLUTO_TIME_SYNC.md  SUBSCRIBER_LIFECYCLE.md  SUBSCRIBER_TROUBLESHOOTING.md  TEST_LIMITATIONS.md  USAGE.md  WEB_UI_GUIDE.md
examples/: nats_bridge.py  packet_inspector.py  signal_processing_harness.py
scripts/: build-with-docker.bat  build-with-docker.sh  check_pluto_time.py  deploy_to_pluto.sh  kill_vita49.sh
src/: pluto_vita49_streamer.c
systemd/: vita49.service
tests/: QUICK_START.md  README.md  __init__.py  conftest.py  run_tests.py  test_dynamic_config.py  test_integration.py  test_packet_optimization.py  test_packets.py  test_stream_server.py  test_streaming_simple.py  test_subscriber_management.py  test_underflow_detection.py  test_vita49.py  (+1 more)
(+35 files in other folders)
